--- a/Parcial2_Ap1_Kevin_Duran.csproj
+++ b/Parcial2_Ap1_Kevin_Duran.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,6 +8,10 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="DAL\" />
+    <Folder Include="BLL\" />
+    <Folder Include="Pages\Consultas\" />
+    <Folder Include="Pages\Registros\" />
   </ItemGroup>
 
 </Project>
