--- a/Parcial2_Ap1_Kevin_Duran - Backup.csproj
+++ b/Parcial2_Ap1_Kevin_Duran - Backup.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Folder Include="Data\" />
     <Folder Include="Pages\Consultas\" />
+    <Folder Include="Pages\Registros\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +19,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Radzen.Blazor" Version="4.7.13" />
   </ItemGroup>
 
 </Project>
